--- a/Assignment/Quiz/question.ipynb
+++ b/Assignment/Quiz/question.ipynb
@@ -2001,22 +2001,12 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "- Compare the two models on their time and accuracy. Which one do you think did well for the disaster classification task.\n",
-    "- How do you think we get better results in this dataset for classification."
+    "\n",
+    "##### Compare the two models on their time and accuracy. Which one do you think did well for the disaster classification task.\n",
+    "- LSTM can perform a higher accuracy than CNN.\n",
+    "##### How do you think we get better results in this dataset for classification.\n",
+    "- It getting better since this dataset we have clean and working on the value data."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Write your answer here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
