--- a/Assignment/Quiz/question.ipynb
+++ b/Assignment/Quiz/question.ipynb
@@ -2002,9 +2002,9 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "##### Compare the two models on their time and accuracy. Which one do you think did well for the disaster classification task.\n",
+    "1. Compare the two models on their time and accuracy. Which one do you think did well for the disaster classification task.\n",
     "- LSTM can perform a higher accuracy than CNN.\n",
-    "##### How do you think we get better results in this dataset for classification.\n",
+    "2. How do you think we get better results in this dataset for classification.\n",
     "- It getting better since this dataset we have clean and working on the value data."
    ]
   }
