--- a/Assignment/Quiz/question.ipynb
+++ b/Assignment/Quiz/question.ipynb
@@ -221,8 +221,9 @@
     "\n",
     "#print and show how many unique classes are in the target\n",
     "\n",
-    "classes = train_data_raw['target'].unique()\n",
-    "num_classes = len(classes)"
+    "classes = train_data_raw.target.value_counts() #Sentiment analysis only 0 or 1\n",
+    "num_classes = len(classes)\n",
+    "num_classes"
    ]
   },
   {
@@ -272,12 +273,10 @@
     "SPLIT_PER = 2 #percentage of split for validation set 2 = 2%\n",
     "split =  int(len(train_data_raw) * (SPLIT_PER/100))\n",
     "\n",
-    "dropped_train = train_data_raw.drop(columns=['id','keyword', 'location'], axis =1) \n",
-    "#drop the id, keyowrd and location columns from the train_data_raw\n",
+    "dropped_train = train_data_raw.drop(columns=['id', 'keyword', 'location']) #drop the id, keyowrd and location columns from the train_data_raw\n",
     "\n",
     "train_data = dropped_train[:-split]\n",
     "valid_data = dropped_train[-split:]\n",
-    "\n",
     "assert train_data.shape == (len(train_data_raw) - split, 2)\n",
     "assert valid_data.shape == (split, 2)"
    ]
@@ -329,7 +328,9 @@
    ],
    "source": [
     "from torchtext.data.utils import get_tokenizer\n",
-    "tokenizer = get_tokenizer('spacy', language='en_core_web_sm')\n",
+    "\n",
+    "tokenizer = get_tokenizer('spacy',language='en_core_web_sm')\n",
+    " \n",
     "tokens = tokenizer(\"We are learning torchtext in AIT!\")  #some test\n",
     "tokens"
    ]
@@ -359,19 +360,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#loop through the data_iter, \n",
-    "# Mind that the data_iter in this case is pandas Dataframe\n",
-    "#remove this line and code here\n",
-    "\n",
     "from torchtext.vocab import build_vocab_from_iterator\n",
+    "\n",
     "def yield_tokens(data_iter):\n",
-    "    for text, _ in data_iter.values:\n",
-    "        yield tokenizer(text) \n",
+    "    for text, _ in data_iter.itertuples(index=False):\n",
+    "        yield tokenizer(text)\n",
+    "    #loop through the data_iter, \n",
+    "    # Mind that the data_iter in this case is pandas Dataframe\n",
+    "    # pass #remove this line and code here\n",
     "\n",
-    "vocab = build_vocab_from_iterator(yield_tokens(train_data), specials=['<unk>', '<pad>', '<bos>', '<eos>'])\n",
-    "vocab.set_default_index(vocab[\"<unk>\"])\n",
+    "specials = ['<unk>','<pad>','<bos>','<eos>'] #create array of special tags for the vocab\n",
+    "vocab  = build_vocab_from_iterator(yield_tokens(train_data), specials = specials, special_first=True)\n",
     "\n",
-    "#set_default_index of the vocab to unknown tag"
+    "#set_default_index of the vocab to unknown tag\n",
+    "vocab.set_default_index(vocab[\"<unk>\"]) #if you don't the id of this word, set it unk"
    ]
   },
   {
@@ -1532,9 +1534,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = \n",
-    "valid = \n",
-    "test = "
+    "train = PD_DATASET(train_data)\n",
+    "valid = PD_DATASET(valid_data)\n",
+    "test = PD_DATASET(test_data_raw)"
    ]
   },
   {
@@ -1543,21 +1545,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data   import DataLoader\n",
+    "from torch.utils.data import DataLoader\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
     "\n",
-    "pad_idx = vocab['<pad>'] #++<----making sure our embedding layer ignores pad\n",
+    "pad_idx = vocab['<pad>'] ##get the pad index from the vocab\n",
     "\n",
     "def collate_batch(batch):\n",
+    "    ## copy the collate_batch function from Professor's code. But it will not work right away\n",
+    "    #mind how the dataset that we use is structured (hint: columns)\n",
     "    label_list, text_list = [], []\n",
-    "    for (_label, _text) in batch:\n",
+    "    for (_text, _label) in batch:\n",
     "        label_list.append(label_pipeline(_label))\n",
     "        processed_text = torch.tensor(text_pipeline(_text), dtype=torch.int64)\n",
     "        text_list.append(processed_text)\n",
     "    #criterion expects float labels\n",
-    "    return torch.tensor(label_list, dtype=torch.int64), pad_sequence(text_list, padding_value=pad_idx, batch_first=True)\n",
-    "## copy the collate_batch function from Professor's code. But it will not work right away\n",
-    "##  mind how the dataset that we use is structured (hint: columns)"
+    "    return torch.tensor(label_list, dtype=torch.int64), pad_sequence(text_list, padding_value=pad_idx, batch_first=True)"
    ]
   },
   {
