--- a/Assignment/Quiz/question.ipynb
+++ b/Assignment/Quiz/question.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sornr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -31,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +48,7 @@
        "'1.13.1+cpu'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +68,7 @@
        "'0.14.1'"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +170,7 @@
        "4  11       0"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +190,7 @@
        "(7613, 5)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +210,7 @@
        "(3263, 4)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,9 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Lets analyze the data a little\n",
     "\n",
@@ -228,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +340,7 @@
        "['We', 'are', 'learning', 'torchtext', 'in', 'AIT', '!']"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -762,15 +781,14 @@
        " ' ': 26,\n",
        " 'caring': 17290,\n",
        " 'rubble': 1658,\n",
-       " '@ScreamQueens': 5426,\n",
-       " 'widout': 26204,\n",
-       " 'scared': 1068,\n",
-       " 'Prompting': 14849,\n",
-       " 'CAFire': 11554,\n",
-       " '\\n': 27,\n",
-       " 'http://t.co/ZDTz3RbS6w': 21089,\n",
-       " 'bets': 6944,\n",
-       " 'battleship': 6933,\n",
+       " 'Metrics': 4419,\n",
+       " 'Mary': 2142,\n",
+       " 'DICE': 12058,\n",
+       " '@ablaze': 10008,\n",
+       " 'look': 231,\n",
+       " 'poem': 7701,\n",
+       " \"CAN'T\": 11564,\n",
+       " '\\r\\n': 27,\n",
        " 'http://t.co/h99bHB29xt': 21604,\n",
        " 'restive': 7791,\n",
        " 'rape': 3894,\n",
@@ -1212,24 +1230,17 @@
        " 'Has': 1098,\n",
        " 'http://t.co/DaqszZuBUb': 19684,\n",
        " 'went': 434,\n",
-       " 'Ashes2Ashes': 11118,\n",
-       " 'plane': 945,\n",
-       " 'http://t.co/vMWTOUyOHm': 22553,\n",
-       " 'San': 1595,\n",
-       " 'Centers': 5696,\n",
-       " 'short': 2286,\n",
-       " 'Palermo': 6360,\n",
-       " 'IS': 362,\n",
-       " 'trust': 1821,\n",
-       " '@realdonaldtrump': 10596,\n",
-       " 'Lady': 2419,\n",
-       " '@YahooSchwab': 9959,\n",
-       " 'Uganda': 3544,\n",
-       " 'Vintage': 3555,\n",
-       " 'http://t.co/KmTwA3n1Gf': 20179,\n",
-       " 'rioters': 7800,\n",
-       " 'https://t.co/EfKCoegJck': 22940,\n",
-       " '\\n\\n': 83,\n",
+       " 'cabling': 17235,\n",
+       " 'Facebook': 1876,\n",
+       " 'Fr': 12752,\n",
+       " '\\r\\n\\r\\n': 83,\n",
+       " 'Tigers': 15996,\n",
+       " 'screen': 3923,\n",
+       " 'Skinless': 15551,\n",
+       " 'Women': 1391,\n",
+       " 'die': 779,\n",
+       " 'Still': 346,\n",
+       " 'delays': 3687,\n",
        " 'Deal': 1860,\n",
        " 'handbags': 7363,\n",
        " 'suicide': 147,\n",
@@ -1314,6 +1325,8 @@
        " 'crossfit': 17653,\n",
        " 'France': 1021,\n",
        " 'fav': 3015,\n",
+       " 'de': 1498,\n",
+       " '\\r\\n ': 723,\n",
        " 'traditional': 3169,\n",
        " 'Emergency': 152,\n",
        " '3': 109,\n",
@@ -1393,10 +1406,16 @@
        " 'airhead': 16725,\n",
        " 'Going': 1887,\n",
        " 'Death': 854,\n",
+       " 'Sport': 4567,\n",
+       " 'Mingo': 14137,\n",
+       " 'http://t.co/XRgPdlSWfD': 20999,\n",
+       " 'AngelRiveraLib\\x89Û': 11045,\n",
+       " 'vigilent': 26070,\n",
+       " 'Columbia': 4200,\n",
        " ...}"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,9 +1427,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".vector_cache\\wiki.simple.vec:  65%|██████▌   | 192M/293M [00:13<00:05, 18.1MB/s]    "
+     ]
+    }
+   ],
    "source": [
     "from torchtext.vocab import FastText\n",
     "fast_vectors = FastText(language='simple') #small for easy training"
@@ -1418,18 +1445,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([26442, 300])"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'fast_vectors' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m fast_embedding \u001b[39m=\u001b[39m fast_vectors\u001b[39m.\u001b[39mget_vecs_by_tokens(vocab\u001b[39m.\u001b[39mget_itos())\u001b[39m.\u001b[39mto(device)\n\u001b[0;32m      2\u001b[0m fast_embedding\u001b[39m.\u001b[39mshape\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'fast_vectors' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1439,9 +1467,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fast_vectors' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m fast_embedding \u001b[39m=\u001b[39m fast_vectors\u001b[39m.\u001b[39mget_vecs_by_tokens(vocab\u001b[39m.\u001b[39mget_itos())\u001b[39m.\u001b[39mto(device)\n\u001b[0;32m      3\u001b[0m \u001b[39m#since the fasttext  has 300 embedding\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39massert\u001b[39;00m fast_embedding\u001b[39m.\u001b[39mshape \u001b[39m==\u001b[39m (\u001b[39mlen\u001b[39m(vocab), \u001b[39m300\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'fast_vectors' is not defined"
+     ]
+    }
+   ],
    "source": [
     "fast_embedding = fast_vectors.get_vecs_by_tokens(vocab.get_itos()).to(device)\n",
     "\n",
